--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><html><head><meta charset=utf-8><meta name=viewport content="width=device-width,initial-scale=1"><title>Games by -3-</title><style>body{
+<!DOCTYPE html><html><head><meta charset=utf-8><meta name=viewport content="width=device-width,initial-scale=1,user-scalable=no"><title>Games by -3-</title><style>body{
         margin: 0;
         padding: 0;
-      }</style><link href=./static/css/app.03f58d49c44df28dbb4dafa86f25158a.css rel=stylesheet></head><body><div id=app></div><script type=text/javascript src=./static/js/manifest.6e5a0b58f3db66b03ec9.js></script><script type=text/javascript src=./static/js/app.10c6ca43c729de59a792.js></script></body></html>
+      }</style><link href=./static/css/app.6c3973aa52a5a833dce0f02a77707bda.css rel=stylesheet></head><body><div id=app></div><script type=text/javascript src=./static/js/manifest.6ff3a40bae4330c7ada5.js></script><script type=text/javascript src=./static/js/app.10c6ca43c729de59a792.js></script></body></html>
